# data-engineering-bootcamp

./: .gitignore
00-bootcamp-project-solution/: load_data_to_bigquery.py  load_data_to_gcs_then_bigquery.py  load_data_to_gcs_then_bigquery_improved.py  pyproject.toml
01-introduction-to-data-engineering/examples/extracting-data-from-sources/scraping/: main_gold.py  pyproject.toml
02-data-warehouse-and-google-bigquery/examples/loading-data-to-bigquery-from-local/: load_table_from_csv.py  pyproject.toml
03-data-lake-with-google-cloud-storage/examples/uploading-to-gcs/: main.py
04-data-pipelines-with-apache-airflow/dags/: everyday.py  my_first_dag.py  play_with_airflow_connections_and_hooks.py  play_with_templating.py
