[tool.poetry]
name = "00-bootcamp-project-solution"
version = "0.1.0"
description = ""
authors = ["Kan Ouivirach <kan@odds.team>"]

[tool.poetry.dependencies]
python = "3.11.7"
requests = "2.29.0"
pysftp = "0.2.9"
google-cloud-bigquery = "^3.17.2"
google-cloud-storage = "^2.14.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"